# Lunas Desktop Environment for Eclipse OS
# Un solo binario: backend según target.
# - target linux (host): modo prueba sin framebuffer real.
# - target no-linux (eclipse): compositor nativo (DRM, SideWind, IPC).

[package]
name = "lunas"
version = "0.2.0"
edition = "2021"
autobins = false

[lib]
name = "lunas"
path = "src/lib.rs"

[dependencies]
heapless = "0.8"
embedded-graphics = "0.8.1"
micromath = "2.1.0"
bitflags = { version = "2.4", default-features = false }
tiny-skia = { version = "0.11", default-features = false, features = ["no-std-float"] }
eclipse_ipc = { workspace = true }
eclipse-syscall = { workspace = true }
sidewind = { path = "../sidewind" }
wayland-proto = { path = "../libs/wayland-proto" }
eclipse-relibc = { workspace = true, features = ["allocator", "eclipse-syscall", "use_std"] }

[features]
default = []
trace-frames = []

[[bin]]
name = "lunas"
path = "src/main.rs"
