[package]
name = "nano"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[target.'cfg(target_vendor = "eclipse")'.dependencies]
eclipse_std = { package = "eclipse_std", path = "../eclipse_std" }
eclipse-syscall = { path = "../../eclipse-syscall" }

[lints]
workspace = true
