[package]
name = "rust-shell"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Use workspace dependencies for common crates (e.g. bitflags)
bitflags = { workspace = true }
eclipse-syscall = { path = "../../eclipse-syscall" }
libc = { workspace = true, features = ["eclipse-syscall", "use_std"] }

[lints]
workspace = true
