[package]
name = "eclipse-s6"
version = "0.1.0"
edition = "2021"
authors = ["Eclipse Rust Team"]
description = "S6 supervision suite integration for Eclipse OS - modular and perfect systems engineering"

[dependencies]
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
eclipse_ipc = { path = "../libs/ipc", package = "eclipse_ipc" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
