[package]
name = "sidewind"
version = "0.2.0"
edition = "2021"
description = "Stack unificada de ventanas, IPC, OpenGL, Wayland y X11 para el compositor Eclipse OS"

[dependencies]
eclipse_ipc = { workspace = true, features = ["async"] }
sidewind_core = { path = "../sidewind_core" }
embedded-graphics = "0.8.1"
heapless = "0.8"
micromath = "2.1.0"
bitflags = { version = "2.4", default-features = false }

eclipse-syscall = { workspace = true }
eclipse-relibc = { workspace = true, features = ["allocator", "eclipse-syscall"] }

[features]
default = []
host-testing = []

[dev-dependencies]
eclipse-relibc = { path = "../../eclipse-relibc", default-features = false }
