[package]
name = "sidewind_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
eclipse-libc = { package = "eclipse-libc", path = "../../eclipse-relibc", default-features = false }
eclipse_ipc = { path = "../libs/ipc", features = ["async"] }
sidewind_core = { path = "../sidewind_core" }
embedded-graphics = "0.8.1"
heapless = "0.8"
micromath = "2.1.0"
sidewind-opengl = { path = "../sidewind_opengl" }
